--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       '/.*/_sidebar.md': '/_sidebar.md'
     },
     name: 'THE.SSR 用户文档',
-    themeColor: '#000000'
+    themeColor: '#000000',
+    mergeNavbar: false
   }
 </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
