--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>THE.SSR 用户文档</title>
+  <title>Blinkload 用户文档</title>
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="bookmark" href="/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="THE.SSR Documents/用户文档">
+  <meta name="description" content="Blinkload Documents/用户文档">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
 </head>
 <body>
   <nav>
-    <a href="https://pccwbtn.org">官网</a>
-    <a href="https://pccwbtn.org/user">用户中心</a>
+    <a href="https://ssr.to">官网</a>
+    <a href="https://ssr.to/user">用户中心</a>
   </nav>
   <div id="app">Loading...</div>
   <script>
@@ -54,7 +54,7 @@
     alias: {
       '/.*/_sidebar.md': '/_sidebar.md'
     },
-    name: 'THE.SSR 用户文档',
+    name: 'Blinkload 用户文档',
     themeColor: '#000000',
     mergeNavbar: false
   }
